--- a/.solutions/.3/admissionconfiguration.yaml
+++ b/.solutions/.3/admissionconfiguration.yaml
@@ -26,7 +26,7 @@ webhooks:
           - UPDATE
     clientConfig:
       service:
-        name: 
-        namespace: 
-        path: 
-      caBundle: 
+        name: validate 
+        namespace: ac-workshop
+        path: /validate/
+      caBundle: CERTIFICATE
