--- a/.solutions/.4/deployment.yaml
+++ b/.solutions/.4/deployment.yaml
@@ -56,6 +56,9 @@ spec:
         volumeMounts:
         - name: "tmp"
           mountPath: "/tmp"
+        - name: certs-volume
+          readOnly: true
+          mountPath: "/certs"
       automountServiceAccountToken: false
       securityContext:
         runAsNonRoot: true
@@ -66,3 +69,6 @@ spec:
       volumes:
       - emptyDir: {}
         name: tmp
+      - name: certs-volume
+        secret:
+          secretName: admission-tls
